5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1807_2562.log
== SUBMITION (2019-06-04 17:30:45) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

# Verifica se o programa vai terminar
while (size(vet) > 1):
   # Zera contador de elementos pares
   npar = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1

   # No. de elementos pares
   print(npar)

   # No. de elementos impares
   print(nimpar)

   # No. total de elementos
   print(???)

   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
0.581639
-- ERROR:
  File "/home/codebench/codes/1807/2562/main.py", line 23
    print(???)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:32:38) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

# Verifica se o programa vai terminar
while (size(vet) > 1):
   # Zera contador de elementos pares
   npar = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1

   # No. de elementos pares
   print(npar)

   # No. de elementos impares
   print(size(vet) - npar)

   # No. total de elementos
   print(nparr)

   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
1.04728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2562/main.py", line 23, in <module>
    print(nparr)
NameError: name 'nparr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:32:52) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

# Verifica se o programa vai terminar
while (size(vet) > 1):
   # Zera contador de elementos pares
   npar = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1

   # No. de elementos pares
   print(npar)

   # No. de elementos impares
   print(size(vet) - npar)

   # No. total de elementos
   print(npar)

   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:32:57) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

# Verifica se o programa vai terminar
while (size(vet) > 1):
   # Zera contador de elementos pares
   npar = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1

   # No. de elementos pares
   print(npar)

   # No. de elementos impares
   print(size(vet) - npar)

   # No. total de elementos
   print(npar)

   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
1.52003
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
4
4
0
11
0
6
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
1
12
1
16
1
16
10
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
8
10
8
2
2
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:34:16) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

# Verifica se o programa vai terminar
while (size(vet) > 1):
   # Zera contador de elementos pares
   npar = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1

   # No. de elementos pares
   print(npar)

   # No. de elementos impares
   print(size(vet) - npar)

   # No. total de elementos
   print(size(vet))

   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
1.18312
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
4
8
0
11
11
6
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
1
12
13
16
1
17
10
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
8
10
18
2
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:44:45) 
-- CODE:
from numpy import *
vet=array(eval(input('Primeiro Vetor:   ')))
while (size(vet)>1):
	npar = 0
for elemento in vet:
	if(elemento % 2 ==0):
		npar= npar + 1
	print(npar)
	print(size(vet)- npar)
	vet=array(eval(input('Proximo Vetor:  ')))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:45:00) 
-- CODE:
from numpy import *
vet=array(eval(input('Primeiro Vetor:   ')))
while (size(vet)>1):
	npar = 0
for elemento in vet:
	if(elemento % 2 ==0):
		npar= npar + 1
	print(npar)
	print(size(vet)- npar)
	vet=array(eval(input('Proximo Vetor:  ')))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:45:22) 
-- CODE:
from numpy import *
vet=array(eval(input('Primeiro Vetor:   ')))
while (size(vet)>1):
	npar = 0
	for elemento in vet:
		if(elemento % 2 ==0):
			npar= npar + 1
			print(npar)
			print(size(vet)- npar)
			vet=array(eval(input('Proximo Vetor:  ')))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:45:33) 
-- CODE:
from numpy import *
vet=array(eval(input('Primeiro Vetor:   ')))
while (size(vet)>1):
	npar = 0
	for elemento in vet:
		if(elemento % 2 ==0):
			npar= npar + 1
		print(npar)
		print(size(vet)- npar)
		vet=array(eval(input('Proximo Vetor:  ')))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:45:41) 
-- CODE:
from numpy import *
vet=array(eval(input('Primeiro Vetor:   ')))
while (size(vet)>1):
	npar = 0
	for elemento in vet:
		if(elemento % 2 ==0):
			npar= npar + 1
		print(npar)
		print(size(vet)- npar)
		vet=array(eval(input('Proximo Vetor:  ')))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:47:12) 
-- CODE:
from numpy import *
vet=array(eval(input('Primeiro Vetor:   ')))
while (size(vet) > 1):
	npar = 0
	for elemento in vet:
		if(elemento % 2 == 0):
			npar= npar + 1
		print(npar)
		print(size(vet)- npar)
		vet=array(eval(input('Proximo Vetor:  ')))
	
# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

# Verifica se o programa vai terminar
while (size(vet) > 1):
   # Zera contador de elementos pares
   npar = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1

   # No. de elementos pares
   print(npar)

   # No. de elementos impares
   print(size(vet) - npar)

   # No. total de elementos
   print(size(vet))

   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:49:19) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:49:23) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:49:24) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:49:24) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:49:24) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:49:24) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 20:49:29) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
1.30885
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2562/main.py", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 20:49:29) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
1.87238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2562/main.py", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:49:33) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:49:33) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 20:49:40) 
-- CODE:

vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
0.792469
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2562/main.py", line 2, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:20:06) 
-- CODE:
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 21:20:27) 
-- CODE:
from numpy import *
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   npar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
   print(npar)
   print(size(vet) - npar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
1.01447
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
4
8
0
11
11
6
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
1
12
13
16
1
17
10
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
8
10
18
2
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
